--- a/templates/select-table-type.hbs
+++ b/templates/select-table-type.hbs
@@ -26,7 +26,9 @@
 </div>
 {{/ifcontain}}
 
+{{#ifcontain better-rolltables.table-type "loot"}}
 <div class="form-group">
     <label>{{localize 'BRT.LootActorName'}}</label>
 
 </div>
+{{/ifcontain}}
